# urweb-uuid

./: .gitignore  Makefile.am  README.md  configure.ac
include/: uuid.h
src/c/: Makefile.am  uuid.c
src/js/: prepare-js.sh  uuid__FFI.js
src/ur/: config.urp.in  lib.urp  uuid.ur  uuid.urs  uuid__FFI.urs
tests/: test.ur  test.urp
